@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/19/2011
 .\"    Manual: \ \&
-.\"    Source: \ \& 0.10.2-dev
+.\"    Source: \ \& 0.10.2
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "03/19/2011" "\ \& 0\&.10\&.2\-dev\" "\ \&"
+.TH "MCABBER" "1" "03/19/2011" "\ \& 0\&.10\&.2\" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1418,7 +1418,7 @@ Written by \m[blue]\fBMikael BERTHE\fR\m[]\&\s-2\u[1]\d\s+2 and others (see AUTH
 \m[blue]\fBMCabber MUC room\fR\m[]\&\s-2\u[4]\d\s+2
 .SH "COPYING"
 .sp
-Copyright (C) 2005\-2011 Mikael Berthe and others\&.
+Copyright (C) 2005\-2012 Mikael Berthe and others\&.
 .sp
 Free use of this software is granted under the terms of the GNU General Public License (GPL)\&.
 .SH "NOTES"
